--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,19 @@
-modName = MyMod
+modName = Warfactory Core
 
 # This is a case-sensitive string to identify your mod. Convention is to use lower case.
-modId = mymodid
+modId = wfcore
 
-modGroup = com.myname.mymodid
+modGroup = wfcore
 
 # Version of your mod.
 # This field can be left empty if you want your mod's version to be determined by the latest git tag instead.
-modVersion = 1.0.0
+modVersion = 0.0.1
 
 # Whether to use the old jar naming structure (modid-mcversion-version) instead of the new version (modid-version)
 includeMCVersionJar = false
 
 # The name of your jar when you produce builds, not including any versioning info
-modArchivesBaseName = mymodid
+modArchivesBaseName = wfcore
 
 # Will update your build.gradle automatically whenever an update is available
 autoUpdateBuildScript = false
@@ -44,14 +44,14 @@ enableModernJavaSyntax = true
 enableJava17RunTasks = false
 
 # Generate a class with String fields for the mod id, name and version named with the fields below
-generateGradleTokenClass = com.myname.mymodid.Tags
+generateGradleTokenClass = wfcore.Tags
 gradleTokenModId = MODID
 gradleTokenModName = MODNAME
 gradleTokenVersion = VERSION
 
 # In case your mod provides an API for other mods to implement you may declare its package here. Otherwise, you can
 # leave this property empty.
-# Example value: apiPackage = api + modGroup = com.myname.mymodid -> com.myname.mymodid.api
+# Example value: apiPackage = api + modGroup = com.wfcore.mymodid -> com.wfcore.mymodid.api
 apiPackage =
 
 # If you want to keep your API code in src/api instead of src/main
@@ -71,7 +71,7 @@ mixinConfigRefmap =
 # Automatically generates a mixin config json if enabled, with the name mixins.modid.json
 generateMixinConfig = true
 # Specify the core mod entry class if you use a core mod. This class must implement IFMLLoadingPlugin!
-# Example value: coreModClass = asm.FMLPlugin + modGroup = com.myname.mymodid -> com.myname.mymodid.asm.FMLPlugin
+# Example value: coreModClass = asm.FMLPlugin + modGroup = com.wfcore.mymodid -> com.wfcore.mymodid.asm.FMLPlugin
 coreModClass =
 # If your project is only a consolidation of mixins or a core mod and does NOT contain a 'normal' mod (meaning that
 # there is no class annotated with @Mod) you want this to be true. When in doubt: leave it on false!
@@ -170,7 +170,7 @@ noPublishedSources = false
 customMavenPublishUrl =
 
 # The group for maven artifacts. Defaults to the 'project.modGroup' until the last '.' (if any).
-# So 'mymod' becomes 'mymod' and 'com.myname.mymodid' 'becomes com.myname'
+# So 'mymod' becomes 'mymod' and 'com.wfcore.mymodid' 'becomes com.wfcore'
 mavenArtifactGroup =
 
 # Enable spotless checks
