--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -39,7 +39,7 @@
  */
 dependencies {
 
-    devOnlyNonPublishable(rfg.deobf(project.files("libs/gregtech-1.12.2-2.8.11-beta-dev.jar"))) // GTCEu 2.9.0
+    // GTCEu 2.8.7 beta
     devOnlyNonPublishable(rfg.deobf(project.files("libs/GregicalityMultiblocks-1.3-dev.jar"))) //GCYM 1.3
 
     // CCL 3.2.3.358
@@ -47,9 +47,8 @@ dependencies {
 
     // AE2UEL 0.55.6 (transitive gt dep)
     implementation rfg.deobf("curse.maven:ae2-extended-life-570458:4402048")
-
-    implementation rfg.deobf("curse.maven:ctm-267602:2915363") // CTM 1.0.2.31
-    implementation rfg.deobf("curse.maven:Avaritia-261348:3143349")
+    // CTM 1.0.2.31
+    implementation rfg.deobf("curse.maven:ctm-267602:2915363")
     api("com.cleanroommc:modularui:2.4.3")
 
 //    implementation rfg.deobf("curse.maven:groovyscript-687577:4991701") // GRS 0.7.3
