--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -40,6 +40,7 @@
 dependencies {
 
     // GTCEu 2.8.7 beta
+    implementation rfg.deobf("curse.maven:gregtech-ce-unofficial-557242:5121638-deobf-5121638-sources-5121638")
     devOnlyNonPublishable(rfg.deobf(project.files("libs/GregicalityMultiblocks-1.3-dev.jar"))) //GCYM 1.3
 
     // CCL 3.2.3.358
