--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -39,7 +39,7 @@
  */
 dependencies {
 
-    devOnlyNonPublishable(rfg.deobf(project.files("libs/gregtech-1.12.2-2.8.11-beta-dev.jar"))) // GTCEu 2.9.0
+    devOnlyNonPublishable(rfg.deobf(project.files("libs/gregtech-1.12.2-2.9.0-beta.jar"))) // GTCEu 2.9.0
     devOnlyNonPublishable(rfg.deobf(project.files("libs/GregicalityMultiblocks-1.3-dev.jar"))) //GCYM 1.3
 
     // CCL 3.2.3.358
