--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -39,8 +39,8 @@
  */
 dependencies {
 
-    devOnlyNonPublishable(rfg.deobf(project.files("libs/gregtech-1.12.2-2.8.11-beta-dev.jar"))) // GTCEu 2.9.0
-    devOnlyNonPublishable(rfg.deobf(project.files("libs/GregicalityMultiblocks-1.3-dev.jar"))) //GCYM 1.3
+    devOnlyNonPublishable(rfg.deobf(project.files("libs/gregtech-1.12.2-2.9.0-beta.jar"))) // GTCEu 2.9.0
+    devOnlyNonPublishable(rfg.deobf(project.files("libs/GregicalityMultiblocks-1.3.jar"))) //GCYM 1.3
 
     //Opencomputers
     implementation rfg.deobf("curse.maven:opencomputers-223008:6390867")
