--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -53,7 +53,7 @@ dependencies {
 
     implementation rfg.deobf("curse.maven:ctm-267602:2915363") // CTM 1.0.2.31
     implementation rfg.deobf("curse.maven:Avaritia-261348:3143349")
-    api("com.cleanroommc:modularui:2.4.3")
+    api("com.cleanroommc:modularui:2.5.0-rc4") { transitive = false }
 
 //    implementation rfg.deobf("curse.maven:groovyscript-687577:4991701") // GRS 0.7.3
 
