--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -39,11 +39,8 @@
  */
 dependencies {
 
-    devOnlyNonPublishable(rfg.deobf(project.files("libs/gregtech-1.12.2-2.9.0-beta.jar"))) // GTCEu 2.9.0
-    devOnlyNonPublishable(rfg.deobf(project.files("libs/GregicalityMultiblocks-1.3.jar"))) //GCYM 1.3
-
-    //Opencomputers
-    implementation rfg.deobf("curse.maven:opencomputers-223008:6390867")
+    devOnlyNonPublishable(rfg.deobf(project.files("libs/gregtech-1.12.2-2.8.11-beta-dev.jar"))) // GTCEu 2.9.0
+    devOnlyNonPublishable(rfg.deobf(project.files("libs/GregicalityMultiblocks-1.3-dev.jar"))) //GCYM 1.3
 
     // CCL 3.2.3.358
     implementation rfg.deobf('curse.maven:codechicken-lib-1-8-242818:2779848')
@@ -52,8 +49,7 @@ dependencies {
     implementation rfg.deobf("curse.maven:ae2-extended-life-570458:4402048")
 
     implementation rfg.deobf("curse.maven:ctm-267602:2915363") // CTM 1.0.2.31
-    implementation rfg.deobf("curse.maven:Avaritia-261348:3143349")
-    api("com.cleanroommc:modularui:2.5.0-rc4") { transitive = false }
+    api("com.cleanroommc:modularui:2.4.3")
 
 //    implementation rfg.deobf("curse.maven:groovyscript-687577:4991701") // GRS 0.7.3
 
